--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:design:27.0.2'
 
     // Dagger 2
     compile "com.google.dagger:dagger:$rootProject.daggerVersion"
@@ -47,9 +48,11 @@ dependencies {
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
 
-    implementation 'com.android.support:design:27.0.2'
-
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // Circular Image View
+    compile "de.hdodenhof:circleimageview:$rootProject.circleImageViewVersion"
+
 }
